--- a/016 project_name/eductionwebsite/package.json
+++ b/016 project_name/eductionwebsite/package.json
@@ -12,6 +12,7 @@
     "@uiw/react-breadcrumb": "^4.22.3",
     "axios": "^1.7.2",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
